CTT_Package/objects/APS_ExceptionLog__e.object
<CustomObject>
    <description>Object to store exception log platform events</description>
    <fields>
        <fullName>APS_Apex_Trigger__c</fullName>
        <description>To store Trigger Name</description>
        <label>Apex Trigger</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Application_Name__c</fullName>
        <description>To know from Application Name</description>
        <label>Application Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Class_Name__c</fullName>
        <description>To store the Exception received Apex Class Name</description>
        <label>Class Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_ContextUser__c</fullName>
        <description>To identify the user who has logged the exception</description>
        <label>Context User</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Exception_Code__c</fullName>
        <description>To store Exception related error code</description>
        <label>Exception Code</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Exception_Description__c</fullName>
        <description>To store Exception Description</description>
        <label>Exception Description</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Exception_Details__c</fullName>
        <description>To store full exception details</description>
        <label>Exception Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APS_Exception_Log_Timestamp__c</fullName>
        <description>To store Exception received timestamp</description>
        <label>Exception Log Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APS_Exception_Type__c</fullName>
        <description>To store the Exception Type</description>
        <label>Exception Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Is_Handled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To find out Handled Exception or un-Handled</description>
        <label>Is Handled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APS_Method_Name__c</fullName>
        <description>To store Exception received Method Name</description>
        <label>Method Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Number_of_Times_Occured__c</fullName>
        <description>To store how many times same error occured at same class &amp; Method</description>
        <label>Number of Times Occured</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APS_OrgId__c</fullName>
        <description>To know the Organization Id Value</description>
        <label>Organization Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Severity__c</fullName>
        <description>to know the Severity of Exception</description>
        <label>Severity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_Unique_Id__c</fullName>
        <label>Ref No</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_WS_CallingApplication__c</fullName>
        <description>To store Web service calling application</description>
        <label>WS CallingApplication</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_WS_CallingArea__c</fullName>
        <description>To store calling area Name</description>
        <label>WS CallingArea</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APS_WS_TransactionID__c</fullName>
        <description>To store Transaction Id of Webservice call</description>
        <label>WS TransactionID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Exception Log</label>
    <pluralLabel>Exception Logs</pluralLabel>
</CustomObject>